--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   velocity_x: ^4.1.2
   shared_preferences: ^2.0.6
   floating_bottom_navigation_bar: ^1.5.2
+  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_test:
