--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shared_preferences: ^2.0.6
   floating_bottom_navigation_bar: ^1.5.2
   youtube_player_flutter: ^8.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
