--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   floating_bottom_navigation_bar: ^1.5.2
   youtube_player_flutter: ^8.0.0
   intl: ^0.19.0
-
+  flutter_rating_bar: ^4.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
