--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   youtube_player_flutter: ^8.0.0
   intl: ^0.19.0
   flutter_rating_bar: ^4.0.0
+  expandable_text: ^2.3.0
   
 dev_dependencies:
   flutter_test:
