--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   expandable_text: ^2.3.0
   widget_and_text_animator: ^1.1.5
+  image_picker: ^0.8.4+1
   
 dev_dependencies:
   flutter_test:
