--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   widget_and_text_animator: ^1.1.5
   image_picker: ^0.8.4+1
   provider: 
+  mailer: ^6.1.2
   
 dev_dependencies:
   flutter_test:
